--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,9 @@ services:
                 ports:
                         - "3308:3306"
         
-        admin:
-                image: adminer
-                ports:
-                        - "8080:8080"
-        
         myapp:
                 restart: on-failure
-                build: ./
+                build: ./backend/
                 expose:
                         - "8115"
                 ports:
@@ -27,3 +22,14 @@ services:
                         WAIT_HOSTS: mysql:3306
                 depends_on:
                         - mysql-development
+
+        frontend: 
+                build: ./frontend
+                command: npm run docker
+                volumes: 
+                        - ./frontend:/usr/src/app
+                working_dir: /usr/src/app
+                ports: 
+                        - "3000:3000"
+                environment: 
+                        HOST: 0.0.0.0
