updated docker-compose file'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
 
         frontend: 
                 build: ./frontend
+                command: npm run build
                 command: npm run docker
                 volumes: 
                         - ./frontend:/usr/src/app
