updated docker-compose file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,14 @@
-FROM node:8
+FROM node
 
 WORKDIR /usr/src/app/
 
-COPY . .
-
-EXPOSE 3000
+COPY package.json .
 
 RUN npm install
+
+COPY . .
+
+RUN npm run build
+RUN npm run generate
+
+CMD ["npm run", "docker"]
